--- a/src/ui/AutoUpdateDialog.ui
+++ b/src/ui/AutoUpdateDialog.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Auto Update</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
@@ -111,7 +111,7 @@
          <item>
           <widget class="QPushButton" name="skipPushButton">
            <property name="text">
-            <string>Skip</string>
+            <string>Skip Version</string>
            </property>
           </widget>
          </item>
