Added Log to KML button to Graph View

--- a/src/ui/AP2DataPlot2D.ui
+++ b/src/ui/AP2DataPlot2D.ui
@@ -81,6 +81,13 @@
         </widget>
        </item>
        <item>
+        <widget class="QPushButton" name="toKMLPushButton">
+         <property name="text">
+          <string>Log to Google Earth File</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <spacer name="horizontalSpacer">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
