--- a/src/ui/AutoUpdateDialog.ui
+++ b/src/ui/AutoUpdateDialog.ui
@@ -32,7 +32,7 @@
      <item>
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
-        <widget class="QLabel" name="label">
+        <widget class="QLabel" name="titleLabel">
          <property name="minimumSize">
           <size>
            <width>0</width>
@@ -58,7 +58,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QLabel" name="label_2">
+        <widget class="QLabel" name="questionLabel">
          <property name="text">
           <string>Do you want to install this version?</string>
          </property>
