--- a/src/uas/LogDownloadDialog.ui
+++ b/src/uas/LogDownloadDialog.ui
@@ -45,6 +45,19 @@
           </widget>
          </item>
          <item>
+          <spacer name="verticalSpacer_2">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>70</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
           <widget class="QPushButton" name="erasePushButton">
            <property name="text">
             <string>Erase Logs</string>
