Added play/pause to datalog reply, and sped up some things

--- a/src/ui/AP2DataPlot2D.ui
+++ b/src/ui/AP2DataPlot2D.ui
@@ -121,6 +121,13 @@
         </widget>
        </item>
        <item>
+        <widget class="QPushButton" name="loadTLogButton">
+         <property name="text">
+          <string>Reply TLog</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QPushButton" name="graphControlsPushButton">
          <property name="text">
           <string>Graph Controls</string>
