--- a/src/ui/AP2DataPlot2D.ui
+++ b/src/ui/AP2DataPlot2D.ui
@@ -123,7 +123,7 @@
        <item>
         <widget class="QPushButton" name="loadTLogButton">
          <property name="text">
-          <string>Replay TLog</string>
+          <string>Enable Log Playback</string>
          </property>
         </widget>
        </item>
